--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -177,15 +177,19 @@ jobs:
         mkdir -p ~/.local/share/vcmi/
         mv h3_assets/* ~/.local/share/vcmi/
 
-    - uses: actions/setup-python@v5
-      if: "${{ matrix.conan_profile != '' }}"
-      with:
-        python-version: '3.10'
-
-    - name: Conan setup
+    - name: Install Conan
       if: "${{ matrix.conan_profile != '' }}"
       run: |
-        pip3 install 'conan<2.0'
+        if command -v pipx
+        then
+            pipx install 'conan<2.0'
+        else
+            pip3 install 'conan<2.0'
+        fi
+
+    - name: Install Conan profile
+      if: "${{ matrix.conan_profile != '' }}"
+      run: |
         conan profile new default --detect
         conan install . \
           --install-folder=conan-generated \
