--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -179,13 +179,7 @@ jobs:
 
     - name: Install Conan
       if: "${{ matrix.conan_profile != '' }}"
-      run: |
-        if command -v pipx
-        then
-            pipx install 'conan<2.0'
-        else
-            pip3 install 'conan<2.0'
-        fi
+      run: pipx install 'conan<2.0'
 
     - name: Install Conan profile
       if: "${{ matrix.conan_profile != '' }}"
@@ -194,14 +188,20 @@ jobs:
         conan install . \
           --install-folder=conan-generated \
           --no-imports \
-          --build=never \
+          --build=missing \
           --profile:build=default \
           --profile:host=CI/conan/${{ matrix.conan_profile }} \
           ${{ matrix.conan_options }}
       env:
         GENERATE_ONLY_BUILT_CONFIG: 1
 
-    - uses: actions/setup-java@v4
+    # Workaround for gradle not discovering SDK that was installed via conan
+    - name: Find Android NDK
+      if: ${{ startsWith(matrix.platform, 'android') }}
+      run: sudo ln -s -T /home/runner/.conan/data/android-ndk/r25c/_/_/package/4db1be536558d833e52e862fd84d64d75c2b3656/bin /usr/local/lib/android/sdk/ndk/25.2.9519653
+
+    - name: Install Java
+      uses: actions/setup-java@v4
       if: ${{ startsWith(matrix.platform, 'android') }}
       with:
         distribution: 'temurin'
@@ -273,6 +273,7 @@ jobs:
             do sleep 3
             ((counter++))
         done
+        rm -rf _CPack_Packages
 
     - name: Artifacts
       if: ${{ matrix.pack == 1 }}
@@ -378,5 +379,6 @@ jobs:
 
         - name: Validate JSON
           run: |
+            sudo apt-get update
             sudo apt install python3-jstyleson
             python3 CI/validate_json.py
